fixed layout issues in mobile screen sizes

--- a/src/components/KPI/KPI.module.scss
+++ b/src/components/KPI/KPI.module.scss
@@ -84,7 +84,7 @@
     flex-direction: column;
     align-content: center;
     justify-content: space-evenly;
-    height: 100%;
+    height: 90px;
 
     &.separate {
       position: relative;
