--- a/src/routes/Home/TopSection/TopSection.module.scss
+++ b/src/routes/Home/TopSection/TopSection.module.scss
@@ -11,8 +11,13 @@
 
   .inputContainer {
     flex: 0 0 40%;
-    min-width: 250px;
-    max-width: 500px;
+    min-width: 200px;
+    max-width: 300px;
+
+    @media only screen and (min-width: 600px) {
+      min-width: 250px;
+      max-width: 500px;
+    }
 
     .select {
       color: #99aae7;
@@ -25,6 +30,11 @@
 
         & div[class$='-singleValue'] {
           color: #99aae7;
+          font-size: 14px;
+          font-weight: 500;
+          @media only screen and (min-width: 600px) {
+            font-size: 16px;
+          }
         }
 
         & div[class$='-Input'] {
@@ -33,6 +43,12 @@
       }
       & div[class$='-menu'] {
         // background-color: #060b29;
+
+        font-size: 14px;
+        font-weight: 500;
+        @media only screen and (min-width: 600px) {
+          font-size: 16px;
+        }
 
         & div[class$='-MenuList'] {
           background-color: #060b29;
